--- a/redditTextDive.Rmd
+++ b/redditTextDive.Rmd
@@ -25,10 +25,12 @@ Here we describe the methods used to scrape text data from the two sources, the 
 
 ## Table of Contents 
 
-**R Environment**
+**R Environment**  
+
 * Libraries used
 
-**Unsupervised Natural Language Processing (NLP) Analysis**
+**Unsupervised Natural Language Processing (NLP) Analysis**  
+
 * Scraping Relevent Reddit Comments
     + Query Reddit for relevant comments with get_reddit()
     + Query Reddit for relevant URLs with reddit_urls() and accessing comments with reddit_content()
@@ -43,12 +45,14 @@ Here we describe the methods used to scrape text data from the two sources, the 
 * Centralizing datasets in a Relational Database
 * Joint Analysis of the Normalized Data
 
-**Supervised Word & Phrase Frequency Analysis**
+**Supervised Word & Phrase Frequency Analysis**  
+
 * Approach to Scraping Indeed Job Listings
 * Putting all the Pieces Together and build our Scraper
 * Analyzing frequencies of Data Science Skills words and phrases
 
-**In Closing**
+**In Closing**  
+
 * Conclusions
 * Future Directions
 
@@ -57,7 +61,7 @@ Here we describe the methods used to scrape text data from the two sources, the 
 
 ## Libraries used
 
-The library are used at various steps in this file. The use of prominent libraries are highlighted throughout the text.
+These libraries are used at various steps in this file. The use of prominent libraries are highlighted throughout the text.
 ```{r, message=FALSE}
 library( RedditExtractoR )
 library( dplyr )
@@ -86,18 +90,18 @@ library( stringi )
 
 ## Scraping Relevent Reddit Comments with **redditExtractoR**
 
-Reddit is a popular content aggregations cite with different boards, or 'subreddits' dedicated (and strictly moderated) for specific topics. This describes the methods used to scrape Reddit comments relevent to data science skills from the subreddit r/datascience.
+Reddit is a popular content aggregations cite with different boards, or 'subreddits' dedicated (and strictly moderated) for specific topics. This section describes the methods used to scrape Reddit comments relevent to data science skills from the subreddit r/datascience.
 
 RedditExtractoR is an R library with tools specific for extracting unstructured data from Reddit. RedditExtractoR functions were used to extract text comment data from relevant threads. 
 
-**Goal** Query reddit for threads relevant to 'Data science skills', collect and mine text for insights, chiefly: "What are the most valued data science skills 
+**Goal:** Query reddit for threads relevant to 'Data science skills', collect and mine text for insights, chiefly: "What are the most valued data science skills 
 
 
 ### Query Reddit for relevant comments with get_reddit()
 
-get_reddit() function was used in multiple queries withing the subreddit r/datascience to find relevant thread & comment results for such terms as 'data science skills', 'data science tools', 'learning data science', 'data tools' etc.  
+get_reddit() function was used in multiple queries within the subreddit r/datascience to find relevant thread & comment results for such terms as 'data science skills', 'data science tools', 'learning data science', 'data tools' etc.  
 
-This is an example query:  
+An example get_reddit() query:  
 **closeAllConnections()  
 URLs <- get_reddit(  
   search_terms   = "data science skills",  
@@ -131,15 +135,15 @@ URLs <- reddit_urls(
   cn_threshold = 1,  
   subreddit = 'datascience'  
 )  
-numComments <- sum( rURLs_df$num_comments )  
+numComments <- sum( rURLs_df$num_comments )    
 allComments <- data.frame( matrix( 0, nrow = numComments, ncol = 1 ) )  
 numURLs <- length( rURLs_df$URL )  
 IDX <- 1  
 Secs <- 3  
 for (aURL in seq(1,numURLs)){  
-  urlContent <- reddit_content(rURLs_df$URL[aURL], wait_time = 2)  
-  Sys.sleep(Secs)  
-  closeAllConnections()  
+  urlContent <- reddit_content(rURLs_df$URL[aURL], wait_time = 2)   
+  Sys.sleep(Secs)   
+  closeAllConnections()   
   gc()  
   numComments_thisURL <- length( urlContent$comment )  
   print( numComments_thisURL )  
@@ -159,7 +163,9 @@ moreComments_df <- read.csv( url1, stringsAsFactors = F) %>%
   rename( comment = matrix.0..nrow...numComments..ncol...1.)
 dim( moreComments_df )
 ```
+<br>
 
+This supplementary [.R script](https://github.com/SmilodonCub/DATA607/blob/master/reddit_scratch.R) was used for the analysis and is available on B. Cooper's github.
 
 ### Combining Comments & removing duplicates cases
 
@@ -182,17 +188,33 @@ dim( allComments_df )
 ## Scraping Indeed Text Data
 A [python script](https://github.com/dmoste/DATA607/blob/master/Project%203/data_science_scrape.py) that utilizes the selenium and BeautifulSoup packages was used to collect a list of Indeed job add links for Data Science jobs.
 
+The following scripts accesses the output of the python scrape and formats the text to a single string for downstream processing:
+```{r, message=F, warning=F}
+# read in the links that R will scrape from a csv and create column names
+URL <- 'https://raw.githubusercontent.com/dmoste/DATA607/master/Project%203/data_science_links.csv'
+links <- read.csv(URL, header = FALSE)
+names(links) <- c("Link")
+links$Link <- as.character(links$Link)
 
+# scrape the lists from each link and add the text to a single string (textList)
+textList <- c()
+for(i in 1:length(links$Link)){
+  h_text <- read_html(links[i,]) %>%
+    html_nodes("li") %>%
+    html_text()
+  textList <- rbind(textList, h_text)
+}
+```
 <br><br>
 
 
 
 ## Comment cleaning with the text mining library **tm**
-We will now use a text mining library to break the text into word elements, group like elements & calculate their frequency. 
+We will now use a text mining library to break the text into word elements, group like elements & calculate their frequency for both datasets. 
 
 ### Cleaning Reddit data
 
-We previously used multiple redditExtractoR methods to build a data.frame of *hopefully* relevant Reddit comments. Now we will use the tm library to reformat the comments to a structure that holds all the unique words across the dataset as well as a count of the occurence frequency. We start for casting the reddit data.frame as a corpus, or a collection of documents. This transformation is necessary for us to apply the tm_map() methods to the text data.
+We previously used multiple redditExtractoR methods to build a data.frame of relevant Reddit comments. Now we will use the tm library to reformat the comments to a structure that holds all the unique words across the dataset as well as a count of the occurence frequency. We start by casting the reddit data.frame as a corpus, or a collection of documents. This transformation is necessary for us to apply the tm_map() methods to the text data.
 
 ```{r, results='hide', warning=F}
 #VectorSource interprets each element as a document & Corpus casts the result as a collection of documents
@@ -237,22 +259,7 @@ reddit1000_words$word <- factor( reddit1000_words$word,
 Here we will access the listings output and use tm methods to clean the data. We will follow the same steps as we did with the Reddit cemments data:
 
 ```{r, message=F, warning=F}
-# read in the links that R will scrape from a csv and create column names
-URL <- 'https://raw.githubusercontent.com/dmoste/DATA607/master/Project%203/data_science_links.csv'
-links <- read.csv(URL, header = FALSE)
-names(links) <- c("Link")
-links$Link <- as.character(links$Link)
-
-# scrape the lists from each link and add the text to a single string (textList)
-textList <- c()
-for(i in 1:length(links$Link)){
-  h_text <- read_html(links[i,]) %>%
-    html_nodes("li") %>%
-    html_text()
-  textList <- rbind(textList, h_text)
-}
-
-# create VCorpus from textList
+# create Corpus from textList
 commentCorpus_I <- Corpus(VectorSource(textList))
 
 # manipulte the corpus to remove unwanted information
@@ -291,7 +298,7 @@ model <- udpipe_download_model(language = "english")
 udmodel_english <- udpipe_load_model(file = model$file_model)
 ```
 
-### Precessing Reddit data
+### Processing Reddit data
 
 Now we apply udpipe's English language model to the Reddit text data. The udpipe_annotate() function will process each word and associate several features. For instance, it will tag each word with it's most likely part of speach (e.g. noun, verb etc)
 
@@ -375,7 +382,7 @@ set.seed(36) #be sure to set the seed if you want to reproduce the same again
 wordcloud(words=nounsIndeed$lemma, freq=nounsIndeed$value, scale=c(3,.5),max.words = 300, random.order=FALSE, rot.per=0.35, colors=brewer.pal(8, "Dark2"))
 ```
 
-There are some remarkable similarities between the words in each of the data sets. In both of the histograms, we can see several words in common.
+**As an initial finding**, there are some remarkable similarities between the words in each of the data sets. In both of the histograms, we can see several words in common. In the word clouds there are multiple! However, we need to compare the datasets directly to explore the similarities further.
 
 <br><br>
 
@@ -449,15 +456,20 @@ ggplot(data_compare, aes(x = reorder(token, Count), y = Count,
        fill = "Site") +
   coord_flip()
 ```
+The figure above is interesting because it directly compares the normalized occurances of nouns that were shared in common between the Indeed and Reddit data. Although we did not quantify this, we can observe in the plot a correlation of commonly shared words.  
+
+**Our key finding here:** we observe several nouns that, using our domain knowledge, we identify as data science skills: Experience, python, business, analysis, degree and machine (learning). Our data indicate that these skills examples are represented the most when input is considered from both the job market perspective (Indeed) and the context of the data science community (Reddit).
+
 <br><br>
 
 # Supervised Word & Phrase Frequency Analysis
 <br>
+
 ## Approach to Scraping Indeed Job Listings
 
-Here we perform a seperate scrape of Indeed to build a text dataset independent of the unsupervised dataset. The Objective is to create a data frame that includes the job titles and the job description 
+Here we perform a seperate scrape of Indeed to build a text dataset independent of the unsupervised dataset. The Objective is to create a data frame that includes the job titles and the job description from Indeed job-listings.
 
-After looking for a data scientist job in specific location (in this case New York, NY), we we copied the link address and stored the URL in a variable called url. Then we used the xml2 package and the read_html function to parse the page. In short, this means that the function will read in the code from the webpage and break it down into different elements (<div>, <span>, <p>, etc.) for you to analyse it.
+After looking for a data scientist job in specific location (in this case New York, NY), we we copied the link address and stored the URL in a variable called url. Then we used the xml2 package and the read_html function to parse the page. In short, this means that the function will read in the code from the webpage and break it down into different elements ('<div>', '<span>', '<p>', etc.) for you to analyse it.
 
 
 ```{r}
@@ -565,7 +577,7 @@ p7
 ```
 <br>  
 
-From the barplot figure above, we can see that the data science skills words and phrases of interest were well represented in the text data. In particular, we observe hard skills like machine learning, Python and SQL occured frequently. However, we also see that some soft skills (e.g. communication) are very common as well. Additionally, we observed that several of the terms used here had corresponded frequent occurances in the unsupervised NLP analysis. For example python, and machine (learining).
+From the barplot figure above, **our finding** is that the data science skills words and phrases of interest were well represented in the text data. In particular, we observe hard skills like machine learning, Python and SQL occured frequently. However, we also see that some soft skills (e.g. communication) are very common as well. Additionally, **another key finding** was that several of the terms used here had corresponded frequent occurances in the unsupervised NLP analysis. For example python, and machine (learining).
 
 
 
@@ -576,7 +588,7 @@ From the barplot figure above, we can see that the data science skills words and
 
 For this project, we scraped, wraggled and processed text data from both Indeed and Reddit. We believe that these sources give two different approaches to addressing which skills are the most valuable in data science. 
 
-Based on the analysis of our data, it appears that some of the most valued skills for data scientists are python, analysis, modeling, machine learning, analytics, and teamwork. These words came up frequently in every database we examined and make sense in terms of what we have learned about so far. When attempting to get a job, it looks like experience and degree are also valued (though these are not skills, per se).
+Based on the analysis of our data, it appears that some of the most valued skills for data scientists are python, analysis, modeling, machine (learning), analytics, and teamwork. These words came up frequently in every database we examined and make sense in terms of what we have learned about so far. When attempting to get a job, it looks like experience and degree are also valued (though these are not skills, per se).
 
 ## Future Directions
 
